[package]
name = "saku"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/crispybaccoon/saku"
license = "MIT OR Apache-2.0"

[[bin]]
name = "saku"
path = "src/main.rs"

[dependencies]
clap = "4.4.4"
directories = "5.0.1"
lazy_static = "1.4.0"
regex = "1.9.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
