[package]
name = "saku"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/crispybaccoon/saku"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sk"
path = "src/main.rs"

[dependencies]
clap = "4.4.4"
saku-lib = { path = "./saku-lib" }
saku-cli = { path = "./saku-cli" }
