[package]
name = "saku_logger"
version = "0.1.0" # don't forget to update html_root_url
description = "a visually pretty env_logger for saku"
license = "MIT/Apache-2.0"
categories = ["development-tools::debugging"]
keywords = ["log", "logger", "logging"]

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[dependencies]
env_logger = "0.10"
log = "0.4"
